add adaptive for 550

--- a/index.html
+++ b/index.html
@@ -337,9 +337,7 @@
         <div class="container section-line">
             <!-- <h2 class="reason__title title">Почему тебе понравится отпуск на Кубе?</h2> -->
             <p class="reason__text  container-content">Многие данные совпадают и это возможно о нашем родственнике Семенкове Илларионе Демидовиче. Про немецкий концлагерь Шталаг 329 есть сведения и воспоминания бывших выживших узников на сайте Общероссийской общественной организации ветеранов
-                «Российский союз ветеранов». https://soyuzveteranov.ru/content/kazhdomu-svoyo
-
-            </p>
+                «Российский союз ветеранов». https://soyuzveteranov.ru/content/ kazhdomu-svoyo</p>
 
         </div>
     </section>
